--- a/dashboard.html
+++ b/dashboard.html
@@ -23,11 +23,13 @@
            <center>
             <img src="1.png" class="profile_image" alt="">
             <h4>Name</h4>
-           </center> 
+           </center>
+           <a href="a"></a><i class="fas fa-laptop-code"></i><span>USN</span></a>
+           <a href="a"></a><i class="fas fa-envelope"></i><span>MAIL-ID</span></a>
            <a href="a"></a><i class="fas fa-desktop"></i><span>DASHBOARD</span></a>
-           <a href="a"></a><i class="fas fa-cogs"></i><span>COMPONENTS</span></a>
-           <a href="a"></a><i class="fas fa-table"></i><span>TABLES</span></a>
-           <a href="a"></a><i class="fas fa-th"></i><span>FORMS</span></a>
+           <a href="a"></a><i class="fas fa-chart-line"></i><span>PERFORMANCE</span></a>
+           <a href="a"></a><i class="fas fa-book-reader"></i><span>QUIZ</span></a>
+           <a href="a"></a><i class="fas fa-file-alt"></i><span>PREVIOUS QUESTION PAPERS</span></a>
            <a href="a"></a><i class="fas fa-info-circle"></i><span>ABOUT</span></a>
            <a href="a"></a><i class="fas fa-sliders-h"></i><span>SETTINGS</span></a>
        </div>
