--- a/dashboard.html
+++ b/dashboard.html
@@ -22,7 +22,7 @@
        <div class="sidebar">
            <center>
             <img src="1.png" class="profile_image" alt="">
-            <h4>Name</h4>
+            <h4>NAME</h4>
            </center>
            <a href="a"></a><i class="fas fa-laptop-code"></i><span>USN</span></a>
            <a href="a"></a><i class="fas fa-envelope"></i><span>MAIL-ID</span></a>
